tests/test_enum/good/disambiguated_cases.catala
@Article@

/*
new enum E:
  -- Case1

new enum F:
  -- Case1 content int
  -- Case2

new scope A:
  param e content E
  param f content F
  param x content int

scope A:
  def e := E.Case1
  def f := F.Case1 content 2
  def x := match f with
    -- F.Case1 of i : i
    -- Case2 : 3
*/
